--- a/FicaFrio/Info.plist
+++ b/FicaFrio/Info.plist
@@ -22,10 +22,14 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>3</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>We need access to the camera to measure your heart rate.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We need access to HealthKit to measure your heart rate.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
